--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -29,6 +29,8 @@
     <Style x:Key="BorderInformation" TargetType="Border">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="#f5f5f5"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="CornerRadius" Value="10"/>
         <Setter Property="Visibility" Value="Collapsed"/>
