--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -51,7 +51,7 @@
         </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel x:Name="MainStackPanel" Margin="0 10 0 20" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border x:Name="PassportBorder" Visibility="Visible" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
+                <Border x:Name="PassportBorder" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
                     <StackPanel Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
@@ -365,8 +365,8 @@
                                         <TextBlock
                                             Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                             Text="Место рождения"/>
-                                        <Grid   >
-                                            <Border    Style="{DynamicResource OtherShadowBorder}">
+                                        <Grid>
+                                            <Border Style="{DynamicResource OtherShadowBorder}">
                                                 <Border.Effect>
                                                     <DropShadowEffect 
                                                         Direction="315"
@@ -582,7 +582,7 @@
                         </StackPanel>
                     </Grid>
                 </Border>
-                <Border x:Name="MedicalBookBorder" Style="{DynamicResource BorderInformation}">
+                <Border Visibility="Visible" x:Name="MedicalBookBorder" Style="{DynamicResource BorderInformation}">
                     <StackPanel Margin="10" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <TextBlock
                             Foreground="#462AD8"
@@ -622,8 +622,8 @@
                             <TextBlock
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                 Text="Личная медицинская книжка выдана"/>
-                            <Grid   >
-                                <Border    Style="{DynamicResource OtherShadowBorder}">
+                            <Grid>
+                                <Border Style="{DynamicResource OtherShadowBorder}">
                                     <Border.Effect>
                                         <DropShadowEffect 
                                             Direction="315"
@@ -698,8 +698,8 @@
                             <TextBlock
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                 Text="Домашний адрес"/>
-                            <Grid   >
-                                <Border    Style="{DynamicResource OtherShadowBorder}">
+                            <Grid>
+                                <Border Style="{DynamicResource OtherShadowBorder}">
                                     <Border.Effect>
                                         <DropShadowEffect 
                                             Direction="315"
@@ -722,8 +722,8 @@
                             <TextBlock
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                 Text="Должность"/>
-                            <Grid   >
-                                <Border    Style="{DynamicResource OtherShadowBorder}">
+                            <Grid>
+                                <Border Style="{DynamicResource OtherShadowBorder}">
                                     <Border.Effect>
                                         <DropShadowEffect 
                                             Direction="315"
@@ -746,8 +746,8 @@
                             <TextBlock
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                 Text="Организация (индивидуальный предприниматель)"/>
-                            <Grid   >
-                                <Border    Style="{DynamicResource OtherShadowBorder}">
+                            <Grid>
+                                <Border Style="{DynamicResource OtherShadowBorder}">
                                     <Border.Effect>
                                         <DropShadowEffect 
                                             Direction="315"
@@ -899,7 +899,7 @@
                                 <TextBlock
                                     Text="Налоговый орган"
                                     Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
-                                <Grid   >
+                                <Grid>
                                     <Border Style="{DynamicResource OtherShadowBorder}">
                                         <Border.Effect>
                                             <DropShadowEffect 
