--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ViewInformationWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ViewInformationWorkerPage.xaml
@@ -50,7 +50,7 @@
         </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel x:Name="MainStackPanel" Margin="0 10 0 20" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border x:Name="PassportBorder" Visibility="Visible" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
+                <Border x:Name="PassportBorder" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
                     <StackPanel Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
@@ -72,9 +72,10 @@
                                 Width="180"
                                 Stretch="Uniform"
                                 Height="240"/>
-                            <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
-                                <StackPanel Margin="0 0 0 3" Orientation="Horizontal">
+                            <StackPanel Margin="10" Grid.Column="1" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+                                <StackPanel Margin="0 0 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
+                                        VerticalAlignment="Top"
                                         Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Паспорт выдан:"/>
@@ -177,8 +178,9 @@
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.DateOfBrich_Passport, StringFormat='{}{0:dd/MM/yyyy}'}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 0" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 0" Orientation="Horizontal">
                                     <TextBlock 
+                                        VerticalAlignment="Top"
                                         Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Место рождения:"/>
@@ -204,11 +206,102 @@
                                 Style="{DynamicResource MainStyleTextBlock}"
                                 FontSize="30"
                                 Margin="0 10 0 10"/>
-                            
+                            <StackPanel Margin="10" Grid.Column="1" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+                                <StackPanel Margin="0 0 0 3.5" Orientation="Horizontal">
+                                    <TextBlock 
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Зарегистрирован:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PlaceResidenceTable.RegistrationDate_PlaceResidence, StringFormat='{}{0:dd/MM/yyyy}'}"/>
+                                </StackPanel>
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Регион:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="400"
+                                        TextWrapping="Wrap"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PlaceResidenceTable.Region_PlaceResidence}"/>
+                                </StackPanel>
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Район:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="400"
+                                        TextWrapping="Wrap"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PlaceResidenceTable.Region_PlaceResidence}"/>
+                                </StackPanel>
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Пункт:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="400"
+                                        TextWrapping="Wrap"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PlaceResidenceTable.Point_PlaceResidence}"/>
+                                </StackPanel>
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Улица:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="400"
+                                        TextWrapping="Wrap"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PlaceResidenceTable.Street_PlaceResidence}"/>
+                                </StackPanel>
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                    <TextBlock 
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Дом:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PlaceResidenceTable.House_PlaceResidence}"/>
+                                </StackPanel>
+                                <StackPanel Margin="0 3.5 0 0" Orientation="Horizontal">
+                                    <TextBlock 
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Квартира:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PlaceResidenceTable.Flat_PlaceResidence}"/>
+                                </StackPanel>
+                            </StackPanel>
                         </StackPanel>
                     </Grid>
                 </Border>
-                <Border x:Name="MedicalBookBorder" Style="{DynamicResource BorderInformation}">
+                <Border Visibility="Visible" x:Name="MedicalBookBorder" Style="{DynamicResource BorderInformation}">
                     <StackPanel Margin="10" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <TextBlock
                             Foreground="#462AD8"
@@ -216,8 +309,104 @@
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
-                        
-                        
+                        <StackPanel Margin="10" Grid.Column="1" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+                            <StackPanel Margin="0 0 0 3.5" Orientation="Horizontal">
+                                <TextBlock 
+                                    Margin="0 0 3.5 0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Номер медицинской книжки:"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="{Binding MedicalBookTable.PersonalNumber_MedicalBook}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                <TextBlock 
+                                    Margin="0 0 3.5 0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Дата выдачи:"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="{Binding MedicalBookTable.DateIssue_MedicalBook, StringFormat='{}{0:dd/MM/yyyy}'}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                <TextBlock 
+                                    VerticalAlignment="Top"
+                                    Margin="0 0 3.5 0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Должность:"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    MinWidth="0"
+                                    Width="Auto"
+                                    MaxWidth="400"
+                                    TextWrapping="Wrap"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="{Binding MedicalBookTable.Role_MedicalBook}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                <TextBlock 
+                                    VerticalAlignment="Top"
+                                    Margin="0 0 3.5 0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="ФИО руководителя:"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    MinWidth="0"
+                                    Width="Auto"
+                                    MaxWidth="600"
+                                    TextWrapping="Wrap"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="{Binding MedicalBookTable.SNMDirector_MedicalBook}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                <TextBlock
+                                    VerticalAlignment="Top"
+                                    Margin="0 0 3.5 0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Личная медицинская книжка выдана:"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    MinWidth="0"
+                                    Width="Auto"
+                                    MaxWidth="500"
+                                    VerticalAlignment="Bottom"
+                                    TextWrapping="Wrap"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="{Binding MedicalBookTable.Issue_MedicalBook}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                <TextBlock 
+                                    VerticalAlignment="Top"
+                                    Margin="0 0 3.5 0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Домашний адрес:"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    MinWidth="0"
+                                    Width="Auto"
+                                    MaxWidth="600"
+                                    TextWrapping="Wrap"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="{Binding MedicalBookTable.HomeAdress_MedicalBook}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
+                                <TextBlock 
+                                    VerticalAlignment="Top"
+                                    Margin="0 0 3.5 0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Организация (индивидуальный предприниматель):"/>
+                                <TextBlock
+                                    Margin="3.5 0 0 0"
+                                    MinWidth="0"
+                                    Width="Auto"
+                                    MaxWidth="400"
+                                    TextWrapping="Wrap"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
+                                    Text="{Binding MedicalBookTable.Organization_MedicalBook}"/>
+                            </StackPanel>
+                        </StackPanel>
                     </StackPanel>
                 </Border>
                 <Border x:Name="SnilsBorder" Style="{DynamicResource BorderInformation}">
