--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     WindowStartupLocation="CenterScreen"
+    KeyUp="Window_KeyUp"
     Style="{DynamicResource AuthorizationWindowStyle}">
     <Border Style="{DynamicResource MainBorderStyle}">
         <Grid>
@@ -234,14 +235,6 @@
                                         Margin="0 0 2 0"/>
                                 </Grid>
                             </Button>
-                            <Button
-                                Content="123"
-                                HorizontalAlignment="Right"
-                                Height="30"
-                                Width="80"
-                                x:Name="TestButton"
-                                Click="TestButton_Click"
-                                Style="{DynamicResource OtherButtonStyle}"/>
                         </Grid>
                     </StackPanel>
                 </Grid>
