--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
@@ -10,9 +10,9 @@
     <ScrollViewer>
         <Grid>
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <StackPanel Orientation="Horizontal">
+                <StackPanel HorizontalAlignment="Center" Margin="3.5" Orientation="Horizontal">
                     <Border 
-                        Height="400"
+                        Height="450"
                         Margin="3.5"
                         Visibility="Visible" 
                         Width="570" 
@@ -20,6 +20,12 @@
                         <Grid Margin="10">
                             <ScrollViewer>
                                 <StackPanel HorizontalAlignment="Center">
+                                    <TextBlock
+                                        Foreground="#462AD8"
+                                        Text="ОБЩЕЕ"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        FontSize="30"
+                                        Margin="0 10 0 10"/>
                                     <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                         <TextBlock
                                             Text="Название"
@@ -145,21 +151,27 @@
                         </Grid>
                     </Border>
                     <Border 
-                    VerticalAlignment="Top"
-                    Height="340"
-                    Margin="3.5"
-                    Visibility="Visible" 
-                    Width="300" 
-                    Style="{DynamicResource BorderInformation}">
+                        VerticalAlignment="Top"
+                        Height="400"
+                        Margin="3.5"
+                        Visibility="Visible" 
+                        Width="300" 
+                        Style="{DynamicResource BorderInformation}">
                         <Grid Margin="10">
                             <StackPanel HorizontalAlignment="Center">
+                                <TextBlock
+                                    Foreground="#462AD8"
+                                    Text="ФОТО"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    FontSize="30"
+                                    Margin="0 10 0 10"/>
                                 <Image
-                                x:Name="MenuPhotoImage"
-                                Source="{Binding ImageMenuTable.Image_ImageMenu}"
-                                Width="250"
-                                Stretch="Uniform"
-                                Height="250"
-                                Margin="0 0 0 10"/>
+                                    x:Name="MenuPhotoImage"
+                                    Source="{Binding ImageMenuTable.Image_ImageMenu}"
+                                    Width="250"
+                                    Stretch="Uniform"
+                                    Height="250"
+                                    Margin="0 0 0 10"/>
                                 <Grid Margin="0 10 0 0">
                                     <Border Style="{DynamicResource OtherShadowBorder}">
                                         <Border.Effect>
@@ -173,87 +185,101 @@
                                         </Border.Effect>
                                     </Border>
                                     <Button
-                                    Style="{DynamicResource OtherButtonStyle}"
-                                    Width="250"
-                                    Height="45"
-                                    x:Name="NewMenuImageButton"
-                                    Click="NewMenuImageButton_Click">
+                                        Style="{DynamicResource OtherButtonStyle}"
+                                        Width="250"
+                                        Height="45"
+                                        x:Name="NewMenuImageButton"
+                                        Click="NewMenuImageButton_Click">
                                         <TextBlock
-                                        Text="Загрузить изображение"
-                                        TextWrapping="Wrap"
-                                        TextAlignment="Center"/>
+                                            Text="Загрузить изображение"
+                                            TextWrapping="Wrap"
+                                            TextAlignment="Center"/>
                                     </Button>
                                 </Grid>
                             </StackPanel>
                         </Grid>
                     </Border>
                 </StackPanel>
-                <Border
-                    Height="240"
-                    Margin="3.5"
-                    Visibility="Visible" 
-                    Width="870" 
-                    Style="{DynamicResource BorderInformation}">
-                    <Grid Margin="10">
-                        <StackPanel HorizontalAlignment="Center">
-                            <ListView
-                                Height="auto"
-                                MinHeight="0"
-                                MaxHeight="220"
-                                SelectionChanged="AllIngredientsListListView_SelectionChanged"
-                                ItemContainerStyle="{StaticResource ListViewItemSelected}"
-                                x:Name="AllIngredientsListListView">
-                                <ListView.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <WrapPanel 
-                                            IsItemsHost="True" 
-                                            VerticalAlignment="Top"
-                                            HorizontalAlignment="Left" 
-                                            Background="Transparent"/>
-                                    </ItemsPanelTemplate>
-                                </ListView.ItemsPanel>
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <UserControl:IngredientsMenuControl/>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                        </StackPanel>
-                    </Grid>
-                </Border>
-                <Border
-                    Height="240"
-                    Margin="3.5"
-                    Visibility="Visible" 
-                    Width="870" 
-                    Style="{DynamicResource BorderInformation}">
-                    <Grid Margin="10">
-                        <StackPanel HorizontalAlignment="Center">
-                            <ListView
-                                Height="auto"
-                                MinHeight="0"
-                                MaxHeight="220"
-                                SelectionChanged="SelectionIngredientsListListView_SelectionChanged"
-                                ItemContainerStyle="{StaticResource ListViewItemSelected}"
-                                x:Name="SelectionIngredientsListListView">
-                                <ListView.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <WrapPanel 
-                                            IsItemsHost="True" 
-                                            VerticalAlignment="Top"
-                                            HorizontalAlignment="Left" 
-                                            Background="Transparent"/>
-                                    </ItemsPanelTemplate>
-                                </ListView.ItemsPanel>
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <UserControl:IngredientsMenuControl/>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                        </StackPanel>
-                    </Grid>
-                </Border>
+                <StackPanel HorizontalAlignment="Center" Margin="3.5" Orientation="Horizontal">
+                    <Border
+                        Height="270"
+                        Margin="3.5"
+                        Visibility="Visible" 
+                        Width="500" 
+                        Style="{DynamicResource BorderInformation}">
+                        <Grid Margin="10">
+                            <StackPanel HorizontalAlignment="Center">
+                                <TextBlock
+                                    Foreground="#462AD8"
+                                    Text="ВСЕ ИНГРИДИЕНТЫ"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    FontSize="30"
+                                    Margin="0 10 0 10"/>
+                                <ListView
+                                    Height="auto"
+                                    MinHeight="0"
+                                    MaxHeight="220"
+                                    SelectionChanged="AllIngredientsListListView_SelectionChanged"
+                                    ItemContainerStyle="{StaticResource ListViewItemSelected}"
+                                    x:Name="AllIngredientsListListView">
+                                    <ListView.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <WrapPanel 
+                                                IsItemsHost="True" 
+                                                VerticalAlignment="Top"
+                                                HorizontalAlignment="Left" 
+                                                Background="Transparent"/>
+                                        </ItemsPanelTemplate>
+                                    </ListView.ItemsPanel>
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <UserControl:IngredientsMenuControl/>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                    <Border
+                        Height="270"
+                        Margin="3.5"
+                        Visibility="Visible" 
+                        Width="500" 
+                        Style="{DynamicResource BorderInformation}">
+                        <Grid Margin="10">
+                            <StackPanel HorizontalAlignment="Center">
+                                <TextBlock
+                                    Foreground="#462AD8"
+                                    Text="ИНГРИДИЕНТЫ"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    FontSize="30"
+                                    Margin="0 10 0 10"/>
+                                <ListView
+                                    Height="auto"
+                                    MinHeight="0"
+                                    MaxHeight="220"
+                                    SelectionChanged="SelectionIngredientsListListView_SelectionChanged"
+                                    ItemContainerStyle="{StaticResource ListViewItemSelected}"
+                                    x:Name="SelectionIngredientsListListView">
+                                    <ListView.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <WrapPanel 
+                                                IsItemsHost="True" 
+                                                VerticalAlignment="Top"
+                                                HorizontalAlignment="Left" 
+                                                Background="Transparent"/>
+                                        </ItemsPanelTemplate>
+                                    </ListView.ItemsPanel>
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <UserControl:IngredientsMenuControl/>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                </StackPanel>
                 <Button
                     HorizontalAlignment="Center"
                     VerticalAlignment="Bottom"
